--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=500, initial-scale=1.0" />
+    <meta name="viewport" content="device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>StudentName | CV2020</title>
   </head>
   <body>
       <div class='main' style="margin-left: 10px;
